# Janus

./: .gitignore  ARCHITECTURE.md  README.md  ai-file-organiser-langgraph-plan.docx  pyproject.toml  rules.yaml
assets/: design-philosophy.md
scripts/: task.xml
src/: checkpoint.py  db.py  events.py  extract.py  graph.py  llm.py  main.py  prompts.py  routing.py  scanner.py  schema.py  server.py  state.py  tray.py  watcher.py
src/api/: feed.py  queue.py  resume.py  rules.py  scan.py  stats.py
src/nodes/: analyze.py  approval.py  dedupe.py  discard.py  dupes.py  execute.py
tests/: test_analyze.py
web/: index.html
