[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janus-organiser"
version = "0.1.0"
description = "AI-powered file organiser with human-in-the-loop approval"
requires-python = ">=3.11"
dependencies = [
    # Phase 1
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "watchdog>=4.0",
    "pyyaml>=6.0",
    # Phase 2
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "pydantic>=2.0",
    # Phase 4
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.scripts]
janus = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]
